--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel=icon href="./favicon.png">
   <meta charset="utf-8">
-  <title> React Mobx Typescript Quickstart </title>
+  <title> AgoraCloud </title>
 </head>
 
 <body>
