--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -19,6 +19,10 @@
   #root {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
+
+  .modebar {
+    display: none !important;
+  }
 </style>
 
 
