--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel=icon href="./favicon.png">
   <meta charset="utf-8">
-  <title> AgoraCloud </title>
+  <title>AgoraCloud</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   }
 
   #root {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Open Sans', sans-serif;
   }
 
   .modebar {
