--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./main.tsx"></script>
-  </body>
-  <style>
-    html, body, #root{
-      height: 100%;
-      overflow: hidden;
-      margin: 0;
-    }
-  </style>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./assets/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AgoraCloud</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="./index.tsx"></script>
+</body>
+<style>
+  html,
+  body {
+    margin: 0;
+  }
+
+  #root {
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  .modebar {
+    display: none !important;
+  }
+</style>
+
 </html>
